<resources>
    <string name="app_name">Know Your Macros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity level</string>
    <string name="weight">Weight</string>
    <string name="fat">Fat %</string>
    <string name="method">Method</string>
    <string name="phase">Phase</string>
    <string name="diet">Diet type</string>

    <string name="activity_level_summary">How do you rank your daily activity level</string>
    <string name="optional_field">Optional</string>
    <string name="method_summary">Used to calculate TDEE (optional)</string>
    <string name="weight_summary">In kg</string>
    <string name="height_summary">In cm</string>
    <string name="title_activity_user_choice">UserChoiceActivity</string>

    <string name="proteins">Proteins:</string>
    <string name="carbs">Carbohydrates:</string>
    <string name="fats">Fats:</string>
    <string name="nav_macros">Macros</string>
    <string name="nav_preferences">Preferences</string>

</resources>
